--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MicroNinja40706 Portfolio</title>
+  <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
+</head>
 <body>
-  <h1>MicroNinja40706</h1>
-  <p>Welcome to my portfolio!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <header>
+    <h1>
+      MicroNinja40706
+    </h1>
+  </header>
+  <section>
+    <h2>
+      Introduction
+    </h2>
+    <p>
+      Hey there! It's MicroNinja40706. I'm making a portfolio here off-platform for my Codecademy Full-Stack Engineer Path. Whew, what a mouthful.
+    </p>
+    <p>
+      What I'll be doing is updating this as I go through the course to add various things. This is a dev diary.
+    </p>
+    <p>
+      Also, don't mind me... I'm going through an "Arial is professional and visually pleasing" phase. I'll snap out of it, I'm sure.
+    </p>
+  </section>
+  <footer>
+    <p>
+      MicroNinja40706's Portfolio 2023
+    </p>
+  </footer>
 </body>
- 
 </html>
