--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     </p>
   </section>
   <footer>
-    <p>
-      MicroNinja40706's Portfolio 2023
-    </p>
+    <div id="footer-blue">
+      <p>
+        MicroNinja40706's Portfolio 2023
+      </p>
+    </div>
+    
   </footer>
 </body>
 </html>
