edit major changes index.html & index.css

--- a/index.html
+++ b/index.html
@@ -1,37 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>MicroNinja40706 Portfolio</title>
-  <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
-</head>
-<body>
-  <header>
-    <h1>
-      MicroNinja40706
-    </h1>
-  </header>
-  <section>
-    <h2>
-      Introduction
-    </h2>
-    <p>
-      Hey there! It's MicroNinja40706. I'm making a portfolio here off-platform for my Codecademy Full-Stack Engineer Path. Whew, what a mouthful.
-    </p>
-    <p>
-      What I'll be doing is updating this as I go through the course to add various things. This is a dev diary.
-    </p>
-    <p>
-      Also, don't mind me... I'm going through an "Arial is professional and visually pleasing" phase. I'll snap out of it, I'm sure.
-    </p>
-  </section>
-  <footer>
-    <div id="footer-blue">
-      <p>
-        MicroNinja40706's Portfolio 2023
-      </p>
-    </div>
+  <head>
+    <meta charset="UTF-8">
+    <title>MicroNinja40706 Portfolio</title>
+    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
+  </head>
+
+  <body>
     
-  </footer>
-</body>
+    <header>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Work</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="jumbotron">
+        <div class="container">
+          <h1>
+            MicroNinja40706
+          </h1>
+        </div>
+      </div>
+    </main>
+
+    <section class="supporting">
+      <div class="container">
+
+        <h2>
+          Introduction
+        </h2>
+        <p>
+          Hey there! It's MicroNinja40706. I'm making a portfolio here off-platform for my Codecademy Full-Stack Engineer Path. Whew, what a mouthful.
+        </p>
+        <p>
+          What I'll be doing is updating this as I go through the course to add various things. This is a dev diary.
+        </p>
+        <p>
+          Also, don't mind me... I'm going through an "Arial is professional and visually pleasing" phase. I'll snap out of it, I'm sure.
+        </p>
+
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <p>
+          MicroNinja40706's Portfolio &copy; 2023
+        </p>
+      </div>
+    </footer>
+
+  </body>
 </html>
