--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>MicroNinja40706 Portfolio</title>
-    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
+    <link rel="stylesheet" href="../resources/css/index.css" type="text/css">
   </head>
 
   <body>
