--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./resources/css/index.css" type="text/css">
     <meta charset="UTF-8">
     <title>MicroNinja40706 Portfolio</title>
-    <link rel="stylesheet" href="../resources/css/index.css" type="text/css">
+    
   </head>
 
   <body>
